Zip the contents of package, not the package directory
Update version to 2.0.1, and add script to build the zip.

--- a/package/Changelog
+++ b/package/Changelog
@@ -1,3 +1,5 @@
+version 2.0.1 (2017-02-11)
+- zip now now contains the content of the package directory
 version 2.0 (2016-12-01)
 - modified to be a Plasma 5 plasmoid
 version 1.4 (2013-05-16):
