--- a/package/Changelog
+++ b/package/Changelog
@@ -1,3 +1,5 @@
+version 2.0.2 (2017-03-13)
+- Issue 3: use lower version of Layouts so it works with >=Qt5.5
 version 2.0.1 (2017-02-11)
 - zip now now contains the content of the package directory
 version 2.0 (2016-12-01)
