--- a/package/Changelog
+++ b/package/Changelog
@@ -1,3 +1,6 @@
+version 2.0.3 (2017-03-26)
+- stop trampling over theme
+- fix tooltips for >=Qt5.5
 version 2.0.2 (2017-03-13)
 - Issue 3: use lower version of Layouts so it works with >=Qt5.5
 version 2.0.1 (2017-02-11)
