--- a/package/contents/po/ru.po
+++ b/package/contents/po/ru.po
@@ -1,20 +1,18 @@
 # plasma-applet-luna-qml language translation file.
 # Copyright (C) 2017 Bill Binder
-# Copyright (C) 2011, 2012 Glad Deschrijver
-# This file is distributed under the same license as the plasma-applet-luna-qml package.
-#
-#
+# This file is distributed under the same license as the PACKAGE package.
 # Bill Binder <dxtwjb@gmail.com>, 2017
-# Glad Deschrijver <glad.deschrijver@gmail.com>, 2012.
+#
+#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: 2.1\n"
 "Report-Msgid-Bugs-To: https://github.com/wwjjbb/Luna-II/issues\n"
 "POT-Creation-Date: 2017-07-02 15:27+0100\n"
-"PO-Revision-Date: 2017-07-01 23:54+0100\n"
+"PO-Revision-Date: 2017-07-01 14:29+0100\n"
 "Last-Translator: Bill Binder <dxtwjb@gmail.com>\n"
 "Language-Team: n/a\n"
-"Language: fr_FR\n"
+"Language: ru\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -22,76 +20,76 @@ msgstr ""
 
 #: code/lunacalc.js:128
 msgid "First Quarter"
-msgstr "Premier quartier"
+msgstr "Первая четверть"
 
 #: code/lunacalc.js:132 code/lunacalc.js:146
 msgid "New Moon"
-msgstr "Nouvelle Lune"
+msgstr "Новолуние"
 
 #: code/lunacalc.js:134 code/lunacalc.js:136
 msgid "Waxing Crescent"
-msgstr "Premier croissant"
+msgstr "Молодая луна"
 
 #: code/lunacalc.js:134
 msgid "Yesterday was New Moon"
-msgstr "La nouvelle Lune était hier"
+msgstr "Вчера была Новолуние"
 
 #: code/lunacalc.js:136
 msgid "%1 days since New Moon"
-msgstr "%1 jours depuis la nouvelle Lune"
+msgstr "%1 дня с новой луны"
 
 #: code/lunacalc.js:142
 msgid "Last Quarter"
-msgstr "Dernier quartier"
+msgstr "Последняя четверть"
 
 #: code/lunacalc.js:148 code/lunacalc.js:150
 msgid "Waning Crescent"
-msgstr "Dernier croissant"
+msgstr "Старая луна"
 
 #: code/lunacalc.js:148
 msgid "Tomorrow is New Moon"
-msgstr "La nouvelle Lune est demain"
+msgstr "Завтра новолуние"
 
 #: code/lunacalc.js:150
 msgid "%1 days to New Moon"
-msgstr "%1 jours avant la nouvelle Lune"
+msgstr "%1 дня до новолуния"
 
 #: code/lunacalc.js:156
 msgid "Full Moon"
-msgstr "Pleine Lune"
+msgstr "Полнолуние"
 
 #: code/lunacalc.js:158 code/lunacalc.js:160
 msgid "Waxing Gibbous"
-msgstr "Lune gibbeuse croissante"
+msgstr "Прибывающая луна"
 
 #: code/lunacalc.js:158
 msgid "Tomorrow is Full Moon"
-msgstr "La pleine Lune est demain"
+msgstr "Завтра полнолуние"
 
 #: code/lunacalc.js:160
 msgid "%1 days to Full Moon"
-msgstr "%1 jours avant la pleine Lune"
+msgstr "%1 дня до полной луны"
 
 #: code/lunacalc.js:162 code/lunacalc.js:164
 msgid "Waning Gibbous"
-msgstr "Lune gibbeuse décroissante"
+msgstr "Убывающая луна"
 
 #: code/lunacalc.js:162
 msgid "Yesterday was Full Moon"
-msgstr "La pleine Lune était hier"
+msgstr "Вчера была полная луна"
 
 #: code/lunacalc.js:164
 msgid "%1 days since Full Moon"
-msgstr "%1 jours depuis la pleine Lune"
+msgstr "%1 дня с полной луны"
 
 #: config/config.qml:24
 msgid "General"
-msgstr "Général"
+msgstr "Общие настройки"
 
 #: po/rc.js:1
 msgctxt "NAME OF TRANSLATORS"
 msgid "Your names"
-msgstr "Glad Deschrijver, Bill Binder"
+msgstr "Bill Binder"
 
 #: po/rc.js:2
 msgctxt "EMAIL OF TRANSLATORS"
@@ -100,118 +98,80 @@ msgstr "dxtwjb@gmail.com"
 
 #: ui/configGeneral.qml:39
 msgid "Preview"
-msgstr "Aperçu de l'image"
+msgstr "Лунное изображение"
 
 #: ui/configGeneral.qml:54
 msgid "Previous image"
-msgstr "L'image précédente"
+msgstr "Предыдущее изображение"
 
 #: ui/configGeneral.qml:61
 msgid "Next image"
-msgstr "L'image suivante"
+msgstr "Следующее изображение"
 
 #: ui/configGeneral.qml:71
 msgid "Hemisphere"
-msgstr "Montrer dans l'hémisphère"
+msgstr "местоположение"
 
 #: ui/configGeneral.qml:79
 msgid "Northern"
-msgstr "Nord"
+msgstr "Северное полушарие"
 
 #: ui/configGeneral.qml:80
 msgid "Southern"
-msgstr "Sud"
+msgstr "Южное полушарие"
 
 #: ui/configGeneral.qml:86
 msgid "Date Format"
-msgstr "Format des dates"
+msgstr "Формат даты"
 
 #: ui/configGeneral.qml:94
 msgid "Text date"
-msgstr "Date textuelle"
+msgstr "Дата форматирования текста"
 
 #: ui/configGeneral.qml:95
 msgid "Short date"
-msgstr "Date courte"
+msgstr "Краткая дата в формате"
 
 #: ui/configGeneral.qml:96
 msgid "Long date"
-msgstr "Date longue"
+msgstr "Длинная форма дата"
 
 #: ui/configGeneral.qml:97
 msgid "ISO date"
-msgstr "Date de l'ISO"
+msgstr "Дата формата ISO"
 
 #: ui/configGeneral.qml:98
 msgid "Custom"
-msgstr "Personnaliser"
+msgstr "Дата пользовательского формата"
 
 #: ui/configGeneral.qml:104
 msgid "Date Format String"
-msgstr "Format des dates personnalisé"
+msgstr "Строка формата даты"
 
 #: ui/configGeneral.qml:115
 msgid "Show background"
-msgstr "Montrer arrière-plan"
+msgstr "Показывать фон"
 
 #: ui/configGeneral.qml:123
 msgid "Lunar Image"
-msgstr "Image lunaire"
+msgstr "Лунное изображение"
 
 #: ui/LunaWidget.qml:116
 msgid "Last new:"
-msgstr "Nouvelle Lune précédente :"
+msgstr "Последняя новолуния:"
 
 #: ui/LunaWidget.qml:123
 msgid "First quarter:"
-msgstr "Premier quartier :"
+msgstr "Первая четверть луны:"
 
 #: ui/LunaWidget.qml:130
 msgid "Full moon:"
-msgstr "Pleine Lune :"
+msgstr "Полнолуние:"
 
 #: ui/LunaWidget.qml:137
 msgid "Third quarter:"
-msgstr "Dernier quartier :"
+msgstr "Третья четверть луны"
 
 #: ui/LunaWidget.qml:144
 msgid "Next new:"
-msgstr "Nouvelle Lune suivante :"
-
-#~ msgid "Light grey image"
-#~ msgstr "Image gris clair"
-
-#~ msgid "Darker grey image"
-#~ msgstr "Image gris plus foncée"
-
-#~ msgid "Original image"
-#~ msgstr "Image originale"
-
-#~ msgid "Yellow disk"
-#~ msgstr "Disque jaune"
-
-#~ msgid "Luna"
-#~ msgstr "Lune"
-
-#~ msgid "Show moon as seen in:"
-#~ msgstr "Afficher la lune comme vue dans :"
-
-#~ msgid "Show &background"
-#~ msgstr "Montrer &arrière-plan"
-
-#~ msgid "&Date format:"
-#~ msgstr "Format des &dates :"
-
-#~ msgid ""
-#~ "<p>The date format string entered here will be used if \"Custom\" is "
-#~ "selected in the combo box above.</p><p>The format of the string should be "
-#~ "as described in <a href=\"http://qt-project.org/doc/qt-4.8/qml-qt."
-#~ "html#formatDateTime-method\">the Qt documentation</a>.</p>"
-#~ msgstr ""
-#~ "<p>Le format introduit ici s'utilise pour formatter les dates lorsque "
-#~ "\"Personnaliser\" est sélectionné ci-dessus.</p><p>Le format doit être "
-#~ "spécifié comme décrit dans <a href=\"http://qt-project.org/doc/qt-4.8/qml-"
-#~ "qt.html#formatDateTime-method\">la documentation de Qt</a>."
-
-#~ msgid "Enter date format string..."
-#~ msgstr "Introduisez le format des dates..."
+msgstr "Следующая новолуние"
