--- a/package/Changelog
+++ b/package/Changelog
@@ -1,5 +1,6 @@
 version 2.0.4 (2017-07-22)
 - get localisation working
+- LunaWidget stretches to fit, not fixed size anymore
 - maintains circular aspect when resized
 version 2.0.3 (2017-03-26)
 - stop trampling over theme
