--- a/package/README
+++ b/package/README
@@ -86,6 +86,10 @@ in the KDE Plasma Workspace. This C++ code is licensed as follows:
   Copyright 2008 by Davide Bettio <davide.bettio@kdemail.net>
   licensed under the GNU GPL version 2 or later.
 
+Several fixes in the changes for 2.1 series were based on the Gealach plasmoid by
+koffeinfriedhof <koffeinfriedhof@gmail.com>, in particular the resizing of the
+LunaWidget when different date formats are selected.
+
 The luna image, gskbyte13.svg, was extracted from the luna SVG file created by:
   Copyright 2009 Jose Alcala (project manager), Dan Gerhards (moon artwork),
                  Jeremy M. Todaro (shadows and layout)
@@ -93,8 +97,8 @@ The luna image, gskbyte13.svg, was extracted from the luna SVG file created by:
   original available at http://www.public-domain-photos.com/free-cliparts/science/astronomy/the_moon_dan_gerhards_01-5094.htm)
   released in the public domain
 
-The luna images, fife-moon & full-moon-dark, were generated from a photo by Bill Binder.
-Released 2017 under Creative Commons Attribution-ShareAlike 3.0
+The luna images, fife-moon.svg & full-moon-dark.svg, were generated from photos
+by Bill Binder. Released 2017 under Creative Commons Attribution-ShareAlike 3.0
 (http://creativecommons.org/licenses/by-sa/3.0/)
 
 This program is free software; you can redistribute it and/or modify it under
